--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -11,6 +11,51 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+main {
+  width: 70%;
+  margin: 0 auto;
+
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 3em;
+  margin: 0.67em 0;
+  text-align: center;
+}
+
+input {
+  border: none;
+  border-bottom: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px 30px;
+  width: 100%;
+  font-size: 1em;
+}
+
+input:focus {
+  outline: none;
+  border-bottom: 2px solid #000;
+}
+
+.image-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.image-preview {
+  margin: 5px;
+}
+
+.link {
+  margin: 20px;
+  text-decoration: underline;
+  color: #333;
+}
+
+.link::hover {
+  color: #000;
 }
